Added basic user functionality, and undid the login changes that caused errors.

--- a/test/fixtures/mentors.yml
+++ b/test/fixtures/mentors.yml
@@ -1,17 +1,7 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  name: MyString
-  location: MyString
-  current_position: MyString
-  school: MyString
-  major: MyString
-  total_years_experience: 
+  user: 
 
 two:
-  name: MyString
-  location: MyString
-  current_position: MyString
-  school: MyString
-  major: MyString
-  total_years_experience: 
+  user: 
